[package]
name = "cargo-bundle"
version = "0.2.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["bundle", "cargo"]
repository = "https://github.com/burtonageo/cargo-bundle"
description = "Wrap rust executables in OS-specific app bundles"

[dependencies]
ar = "0.2"
clap = "^2"
error-chain = "^0.9"
icns = "^0.2"
image = "0.12"
libflate = "0.1"
md5 = "0.3"
serde = "1.0"
serde_derive = "1.0"
tar = "0.4"
target_build_utils = "0.3"
term = "0.4"
toml = "0.4"
walkdir = "1"
