[package]
name = "cargo-bundle"
version = "0.6.1"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bundle", "cargo"]
repository = "https://github.com/burtonageo/cargo-bundle"
description = "Wrap rust executables in OS-specific app bundles"
edition = "2021"

[package.metadata.bundle.example.hello]
name = "hello"
identifier = "io.github.burtonageo.cargo-bundle.hello"
icon = ["examples/hello/icon*.png"]
category = "Utility"
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""

[dependencies]
anyhow = "1"
ar = "0.9"
cab = "0.6"
cargo_metadata = "0.20"
chrono = "0.4"
clap = "^2"
dirs = "6"
glob = "0.3"
icns = "0.3"
image = { version = "0.25", features = ["png"] }
libflate = "2"
md5 = "0.7"
msi = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
strsim = "0.11"
tar = "0.4"
target_build_utils = "0.3"
term = "1"
toml = "0.8"
uuid = { version = "1", features = ["v5"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
winit = "0.24"

[[example]]
name = "hello"
path = "examples/hello/main.rs"
